=== HEAD

* Handle :user and :password options in the JDBC adapter (jeremyevans)

* Fix warnings when using the ODBC adapter (jeremyevans)

* Add opening_databases.rdoc file for describing how to connect to a database (mwlang, jeremyevans)

* Significantly increase JDBC select performance (jeremyevans)

* Slightly increase SQLite select performance using the native adapter (jeremyevans)

* Majorly increase MySQL select performance using the native adapter (jeremyevans)

* Pass through unsigned/elements/size and other options when altering columns on MySQL (tmm1)

* Allow on_duplicate_key_update to affect Dataset#insert on MySQL (tmm1)

* Support using a given table and column to store schema versions, using new Migrator.run method (bougyman, jeremyevans)

* Fix foreign key table constraints on MySQL (jeremyevans)

* Remove Dataset#table_exists?, use Database#table_exists? instead (jeremyevans)

* Fix graphing of datasets with dataset sources (jeremyevans) (#271)

* Raise a Sequel::Error if Sequel.connect is called with something other than a Hash or String (jeremyevans) (#272)

* Add -N option to bin/sequel to not test the database connection (jeremyevans)

* Make Model.grep call Dataset#grep instead of Enumerable#grep (jeremyevans)

* Support the use of Regexp as first argument to StringExpression.like (jeremyevans)

* Fix Database#indexes on PostgreSQL when the schema used is a symbol (jeremyevans)

=== 3.1.0 (2009-06-04)

* Require the classes match to consider an association a reciprocal (jeremyevans) (#270)

* Make Migrator work correctly with file names like 001_873465873465873465_some_name.rb (jeremyevans) (#267)

* Add Dataset#qualify_to and #qualify_to_first_source, for qualifying unqualified identifiers in the dataset (jeremyevans)

* All the use of #sql_subscript on most SQL::* objects, and support non-integer subscript values (jeremyevans)

* Add reflection.rdoc file which explains and gives examples of many of Sequel's reflection methods (jeremyevans)
